[gd_scene load_steps=7 format=2]

[ext_resource path="res://button.gd" type="Script" id=1]
[ext_resource path="res://Buttons/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://click.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=4]
resource_name = "hover"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "on"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 121.482, 50.2751 )

[node name="Area2D" type="Area2D"]
position = Vector2( 286.638, 347.429 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 4 )
anims/on = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.36584, -40.5761 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.880615, -2.64185 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
